# smooth-json

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: benchmark.yml  build.yml  publish.yml  test.yml
benches/: flatten.rs
src/: lib.rs
tests/: integration_test.rs
tests/benchmarks/: results.md
tests/input/: file1.json  file2.json
