[package]
name = "smooth-json"
authors = ["Jacob Latonis"]
description = "Flatten serde_json Value variants into serde_json Objects ready for use in columnar or table-like usages."
readme = "readme.md"
license = "MIT"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/latonis/smooth-json"
keywords = ["flatten", "json", "parquet", "smooth", "unnest"]
categories = ["data-structures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"