[package]
name = "smooth-json"
authors = ["Jacob Latonis"]
description = "smooth-json is an opinionated, customizable utility to flatten serde_json Value variants into serde_json Objects ready for use in columnar or table-like usages."
readme = "readme.md"
license = "MIT"
version = "0.2.7"
edition = "2024"
repository = "https://github.com/latonis/smooth-json"
keywords = ["flatten", "json", "parquet", "smooth", "unnest"]
categories = ["data-structures"]
# The binary target is only used by tests.
exclude = ["/.github", "tests", "src/bin"]

[dependencies]
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "flatten"
harness = false
